# Banking-chat

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: manifest.json  sample_questions.json
docs/: ops.md
infra-cdk/: README.md  app.py  cdk.context.json
infra-cdk/cdk.out/: BankingRagStack.assets.json  BankingRagStack.template.json  manifest.json  tree.json
infra-cdk/stacks/: __init__.py  banking_rag_stack.py
mlruns/0/: meta.yaml
mlruns/239808213540730862/: meta.yaml
mlruns/239808213540730862/8ee6914da1294997997ff626dd843777/: meta.yaml
mlruns/239808213540730862/8ee6914da1294997997ff626dd843777/metrics/: chunk_count  (+2 more)
mlruns/239808213540730862/e5ffacffed794af3a57ef6debc99451a/: meta.yaml
mlruns/437611229560710485/: meta.yaml
mlruns/437611229560710485/f45560b146214023a1aa310f87444db7/: meta.yaml
notebooks/: banking_rag_demo.ipynb
src/: utils.py
src/chunking/: document_chunking.py
src/components/embedding/: document_embedding.py
src/components/ingestion/: load_documents.py
src/components/vectorstore/: vector_store.py
src/embedding/: __init__.py  document_embedding.py
src/evaluation/: eval.py
src/ingestion/: load_documents.py
src/pipeline/: __init__.py  build_artifacts.py  rag_pipeline.py
src/retrieval/: __init__.py  document_retriever.py
src/server/: app.py  gradio_ui.py  schemas.py
src/tests/: conftest.py  test.py  test_api_contract.py  test_manifest_golden.py  test_retrieval_offline.py  tests.jsonl
src/vectorstore/: __init__.py  vector_store.py
(+22 files in other folders)
