[project]
name = "banking-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "ffmpy>=1.0.0",
    "fastapi>=0.115.5",
    "gradio>=5.50.0",
    "gradio-client>=1.14.0",
    "httpx>=0.28.1",
    "litellm>=1.52.7",
    "mlflow>=2.16.0",
    "langchain>=1.0.8",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "pandas>=2.3.3",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "typer>=0.9",
    "unstructured>=0.18.20",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]
